# noren

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  default.nix  flake.nix
docs/: integration.md
src/: cli.rs  completions.rs  config.rs  connect.rs  layout_preview.rs  main.rs  picker.rs  preview.rs  session.rs  snapshot.rs  state.rs  util.rs  window.rs
src/sources/: config_src.rs  mod.rs  zellij.rs  zoxide.rs
tests/: cli.rs
tests/fixtures/: session-layout.kdl
