[package]
name = "zjp3"
version = "0.1.0"
edition = "2024"
description = "Sesh-parity zellij session picker (Rust)"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = true
opt-level = 3
strip = true
